# nonebot-prevent-withdrawal

./: README.md  pyproject.toml
src/nonebot_prevent_withdrawal/: __init__.py
