[project]
name = "nonebot-prevent-withdrawal"
version = "0.1.8"
description = "偷看群友撤回的消息"
authors = [
    {name = "zhongwen-4", email = "2401128923@qq.com"},
]
dependencies = [
    "nonebot2>=2.3.3",
    "nonebot-adapter-onebot>=2.4.5",
    "nonebot-plugin-localstore>=0.7.1",
    "httpx>=0.27.2",
    "nonebot-plugin-alconna>=0.53.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
